# personal-website

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  package-lock.json  tailwind.config.js
css/: output.css
public/: index.css
src/: main.rs
src/routes/: hello.rs  index.rs  mod.rs
templates/: index.html
templates/components/: navbar.html
templates/layouts/: default.html
